--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:b">
     <link rel="stylesheet" href="./styles.css?v=1.0">
     <script src="./script.js"></script>
-    <link rel="icon" href="./media/favicon.png">
+    <link rel="icon" href="./media/favicon.png?v=2.0.0">
     <title>DerLung-API</title>
 </head>
 
