--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <div>
-            <h2><a href="https://api.derlung.com/test">api.derlung.com/test</a></h2>
+            <h2><a href="https://api.derlung.com/test">/test</a></h2>
             <p>
                 antwortet mit "test response"
             </p>
