add titles to socials icons and change behavior to open their links in new tab

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,9 +31,9 @@
         <section class="socials">
             <p>Website designed by DerLung</p>
             <section class="social_icons">
-                <a href="https://github.com/DevLung"><img class="social_icon" src="./media/socials-icons/github-mark-white.png" alt="DevLung - GitHub"></a>
-                <a href="https://www.youtube.com/@DerLung"><img class="social_icon" src="./media/socials-icons/youtube_social_circle.png" alt="DerLungYT - YouTube"></a>
-                <a href="https://twitter.com/DerLungYT"><img class="social_icon" src="./media/socials-icons/X_logo-white.png" alt="DerLungYT - X"></a>
+                <a href="https://github.com/DevLung" target="_blank" rel="noreferrer noopener"><img class="social_icon" src="./media/socials-icons/github-mark-white.png" title="DevLung - GitHub" alt="DevLung - GitHub"></a>
+                <a href="https://www.youtube.com/@DerLung" target="_blank" rel="noreferrer noopener"><img class="social_icon" src="./media/socials-icons/youtube_social_circle.png" title="DerLungYT - YouTube" alt="DerLungYT - YouTube"></a>
+                <a href="https://twitter.com/DerLungYT" target="_blank" rel="noreferrer noopener"><img class="social_icon" src="./media/socials-icons/X_logo-white.png" title="DerLungYT - X" alt="DerLungYT - X"></a>
             </section>
         </section>
     </footer>
