--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:b">
-    <link rel="stylesheet" href="./styles.css?v=1.0.1">
+    <link rel="stylesheet" href="./styles.css?v=1.0.2">
     <script src="./script.js"></script>
     <link rel="icon" href="./media/favicon.png?v=2.0.0">
     <title>DerLung-API</title>
@@ -22,7 +22,7 @@
                 antwortet mit "test response"
             </p>
             <section class="main_url_section">
-                <a class="main_url" href="#" onclick="copyUriToClipboard(this, 'https://api.derlung.com/test')">URI kopieren</a>
+                <a class="main_url" onclick="copyUriToClipboard(this, 'https://api.derlung.com/test')">URI kopieren</a>
             </section>
         </div>
     </section>
