--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,7 @@
 
         <div id="test">
             <h2><a href="https://api.derlung.com/test">/test</a></h2>
-            <code>Content-Type: text/html</code>
+            <code>Content-Type: text/plain</code>
             <p>
                 antwortet mit "test response"
             </p>
